# ProjectPillot

./: .gitignore  CMakeLists.txt  README.md
BackEnd/: CMakeLists.txt
BackEnd/app/: CMakeLists.txt  main.cpp
BackEnd/common/: CMakeLists.txt
BackEnd/common/server/: serverEnums.cpp  serverEnums.h
BackEnd/controller/: CMakeLists.txt  Controller.cpp  Controller.h
BackEnd/controller/ServerCtrl/: CMakeLists.txt  ServerController.cpp  ServerController.h
BackEnd/controller/impl/: ControllerImpl.cpp  ControllerImpl.h
BackEnd/server/: CMakeLists.txt  Server.cpp  Server.h  server.cpp  server.h
BackEnd/server/impl/: ServerImpl.cpp  ServerImpl.h  Session.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  qtServer.cpp  qtServer.h  serverImpl.cpp  serverImpl.h
BackEnd/ui/: CMakeLists.txt  View.cpp  View.h  ViewModel.cpp  ViewModel.h
BackEnd/ui/impl/: ServerSettingsUI.cpp  ServerSettingsUI.h  ViewImpl.cpp  ViewImpl.h
BackEnd/ui/impl/qml/: SettingsServerCard.qml  main.qml  qml.qrc
BackEnd/ui/impl/resource/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SetingsNetworkWidget.cpp  SetingsNetworkWidget.h  SetingsNetworkWidget.ui
ClientTank/: CMakeLists.txt
Common/: CMakeLists.txt  macro.h
Common/logger/: log_settings.conf  logger.h
Common/network/: Converter.cpp  Converter.h  Enums.cpp  Enums.h  Types.cpp  Types.h  enums.cpp  enums.h  serDesHelper.cpp  serDesHelper.h  type.cpp  type.h
Common/server/: Enums.cpp  Enums.h  Types.cpp  Types.h
